--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         />
         <title>Loop 1 - Steep 8</title>
     </head>
+
+    <!-- Bu githubga Shohjakhon Tomonidan Yuklandi -->
+    <!-- Github darsi uchun -->
+
     <body>
         <div class="parent-box">
             <div class="left-box">
